# vr3dmodels

./: Architecture.txt  CMakeLists.txt  cameraCalibration.cpp  cameraCalibration.h  main.cpp  sfm.cpp  sfm.h  sfmBundleAdjustment.cpp  sfmBundleAdjustment.h  utilities.h
calibration/: cameraMatrix.xml  cameraMatrix2.xml
images/gradle/wrapper/: gradle-wrapper.properties
include/: ioUtils.h  mesh.h  sfm.h  utilities.h
reconstructions/fountain_ORB_BF_2/base/: baseReconstruction.ply
reconstructions/fountain_ORB_BF_2/sparse/: pointCloud.ply
src/: cameraCalibration.cpp  ioUtils.cpp  main.cpp  mesh.cpp  sfm.cpp  sfmBundleAdjustment.cpp
visualizer/: CMakeLists.txt  visualizer.cpp
